--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
     branches: [main, master]
   pull_request:
   release:
-    types: [created]
+    types: [published]
 
 jobs:
   build:
@@ -60,6 +60,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     if: github.event_name == 'release'
+    permissions:
+      contents: read
+      id-token: write
 
     steps:
       - uses: actions/checkout@v4
@@ -71,7 +74,7 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Download all artifacts
         uses: actions/download-artifact@v4
@@ -90,7 +93,7 @@ jobs:
       - name: Build TypeScript
         run: npm run build:ts
 
-      - name: Publish
-        run: npm publish --access public
+      - name: Publish to npm
+        run: npm publish --provenance --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
