feat: websockets support (#2)

--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "node-wreq",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "description": "Browser fingerprint bypass library using Rust for TLS/HTTP2 impersonation",
   "main": "dist/node-wreq.js",
   "types": "dist/node-wreq.d.ts",
   "scripts": {
     "build": "npm run build:rust && npm run build:ts",
     "build:rust": "napi build --platform --release --cargo-cwd rust rust",
-    "build:ts": "tsc",
+    "build:ts": "npm run clean:dist && tsc",
+    "clean:dist": "rimraf dist",
     "artifacts": "napi artifacts",
-    "clean": "rm -rf dist rust/target rust/*.node",
-    "test": "npm run build && node --test dist/test/node-wreq.spec.js",
+    "clean": "rimraf dist rust/target rust/*.node",
+    "test": "npm run build && node --test dist/test/*.spec.js",
     "format": "prettier --write \"src/**/*.{ts,js,json,md}\"",
     "format:check": "prettier --check \"src/**/*.{ts,js,json,md}\""
   },
@@ -22,7 +23,14 @@
     "tls",
     "http2",
     "impersonation",
-    "web-scraping"
+    "web-scraping",
+    "crawler",
+    "web-scraper",
+    "wreq",
+    "ja3",
+    "tls-fingerprint", 
+    "ja4", 
+    "browser-fingerprint-bypass"
   ],
   "author": "will-work-for-meal",
   "license": "MIT",
@@ -34,15 +42,15 @@
     "url": "https://github.com/will-work-for-meal/node-wreq/issues"
   },
   "homepage": "https://github.com/will-work-for-meal/node-wreq#readme",
-  "dependencies": {},
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
     "@napi-rs/cli": "^2.18.0",
-    "prettier": "^3.2.5"
+    "@types/node": "^20.0.0",
+    "prettier": "^3.2.5",
+    "rimraf": "^6.0.1",
+    "typescript": "^5.0.0"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=20.0.0"
   },
   "os": [
     "darwin",
